[package]
name = "cpp-types"
version = "0.1.0"
edition = "2021"

[dependencies]
allocator-api2 = "0.2.21"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_System_Threading"
]

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.

# Release Build with Debug Info
[profile.release-debug]
inherits = "release"
debug = true # Allow us to debug using LLDB
