[workspace]

members = [
    "cpp-types",
    "cpp-types-macro",
    "cpp-types-macro-impl"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = [ "Rirurin" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/cpp-types"
license-file = "LICENSE"
edition = "2021"

# Optimized Release Build, all the optimizations!!
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.

# Release Build with Debug Info
[profile.release-debug]
inherits = "release"
debug = true # Allow us to debug using LLDB

# Slow Debug, for fast iteration
[profile.slow-debug]
inherits = "release"
debug = true
# lto = true
# lto = "thin"
lto = false
incremental = true
codegen-units = 256
